--- a/plugin.xml
+++ b/plugin.xml
@@ -39,8 +39,8 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     <platform name="android">
 
         <config-file target="AndroidManifest.xml" parent="/*">
-            <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-            <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+            <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:required="True" />
+            <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:required="True" />
             <uses-feature android:name="android.hardware.location.gps" />
         </config-file>
 
